Implements ui and utils packages

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "ui",
+  "name": "package-ui",
   "version": "1.0.0",
   "type": "module",
   "main": "./src/main.js",
-  "devDependencies": {}
+  "dependencies": {
+    "package-utils": "*"
+  }
 }
