--- a/apps/counter-app-jotai/package.json
+++ b/apps/counter-app-jotai/package.json
@@ -14,7 +14,9 @@
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "package-ui": "*",
+    "package-utils": "*"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
