--- a/apps/counter-app-zustand/package.json
+++ b/apps/counter-app-zustand/package.json
@@ -12,9 +12,13 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "isbot": "^5.1.27",
+    "package-types": "*",
+    "package-ui": "*",
+    "package-utils": "*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
