--- a/apps/counter-app-redux/package.json
+++ b/apps/counter-app-redux/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.5.3",
+    "package-types": "*",
+    "package-ui": "*",
+    "package-utils": "*"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
